--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
-			<version>4.0.0-ALPHA</version>
+			<version>4.0.0-BETA</version>
 		</dependency>
 		<dependency>
 			<groupId>marc4j</groupId>
